[package]
name = "rusty-todo"
version = "0.1.0"
edition = "2021"
description = "Rusty-todo is a simple colorful CLI todo list manager"
authors = ["dvidbruhm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = { version = "3.2.20", features = ["derive"] }
colored = "2"
dirs = "4.0.0"
