[package]
name = "rusty-todo"
version = "0.1.0"
edition = "2021"
description = "A simple and colorful CLI todo list manager"
authors = ["dvidbruhm"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/dvidbruhm/rusty-todo"
repository = "https://github.com/dvidbruhm/rusty-todo"
keywords = ["cli", "todo", "list", "task"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.22"
clap = { version = "3.2.20", features = ["derive"] }
colored = "2"
dirs = "4.0.0"
